added an extra JS class for selector__item--selected

--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -3,7 +3,7 @@
     <div class="breadcrumbs__item JS_breadcrumbs__item">
 
       <div class="selector">
-        <div class="selector__item selector__item--selected">
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
           <div class="selector__block">
             <div class="selector__blockPart selector__blockPart--label JS_has-popup JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">{{item.label}}</div>
           </div>
