--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -12,7 +12,7 @@
     <div class="action readonly">
 
       <div class="selector selector--expanded">
-        <div class="selector__item selector__item--selected">
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
           <div class="selector__block">
             <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
           </div>
@@ -95,7 +95,7 @@
       <div class="itemBox__cellInner">
         <div class="itemBox__value">
           <div class="selector selector--expanded">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field">395415</div>
               </div>
@@ -112,7 +112,7 @@
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
-          <div class="selector__item selector__item--selected">
+          <div class="selector__item JS_selectorItem--active selector__item--selected">
             <div class="selector__block">
               <span class="selector__blockPart selector__blockPart--field">Vasya Aksyonov</span>
             </div>
@@ -123,7 +123,7 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect selector--expanded JS_selector">
-          <div class="selector__item selector__item--selected JS_selectorItem">
+          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--prefix"></div>
             </div>
@@ -147,7 +147,7 @@
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--expanded">
-          <div class="selector__item selector__item--selected">
+          <div class="selector__item JS_selectorItem--active selector__item--selected">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--field">35825</div>
             </div>
@@ -163,7 +163,7 @@
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
-          <div class="selector__item selector__item--selected">
+          <div class="selector__item JS_selectorItem--active selector__item--selected">
             <div class="selector__block">
               <span class="selector__blockPart selector__blockPart--field">Vincent Goosens</span>
             </div>
@@ -180,7 +180,7 @@
             </div>
           </div>
           <div class="selector__itemSeperator"></div>
-          <div class="selector__item selector__item--selected JS_selectorItem">
+          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--prefix"></div>
             </div>
@@ -205,7 +205,7 @@
     <li class="itemBox__cell flex-grow-2">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
-          <div class="selector__item selector__item--selected">
+          <div class="selector__item JS_selectorItem--active selector__item--selected">
             <div class="selector__block">
               <span class="selector__blockPart selector__blockPart--field">_Not Assigned</span>
             </div>
@@ -222,7 +222,7 @@
             </div>
           </div>
           <div class="selector__itemSeperator"></div>
-          <div class="selector__item selector__item--selected JS_selectorItem">
+          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--prefix"></div>
             </div>
@@ -277,7 +277,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="selector selector--expanded">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field">32072</div>
               </div>
@@ -291,7 +291,7 @@
       <li class="itemBox__cell flex-grow-2">
         <div class="itemBox__cellInner">
           <div class="selector selector--singleselect">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <span class="selector__blockPart selector__blockPart--field">Jonathan Verschaeren</span>
               </div>
@@ -303,7 +303,7 @@
         <div class="itemBox__cellInner">
 
           <div class="selector selector--multiselect JS_selector">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;"></div>
                 <div class="selector__blockPart selector__blockPart--field">281</div>
@@ -328,7 +328,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="selector selector--expanded">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field">32750</div>
               </div>
@@ -342,7 +342,7 @@
       <li class="itemBox__cell flex-grow-2">
         <div class="itemBox__cellInner">
           <div class="selector selector--singleselect">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <span class="selector__blockPart selector__blockPart--field">Koen Willaert</span>
               </div>
@@ -354,7 +354,7 @@
         <div class="itemBox__cellInner">
 
           <div class="selector selector--multiselect JS_selector">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--prefix" style="background-color: gray;"></div>
                 <div class="selector__blockPart selector__blockPart--field">275</div>
@@ -376,7 +376,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="selector selector--expanded">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field">32454</div>
               </div>
@@ -391,7 +391,7 @@
         <div class="itemBox__cellInner">
           <div class="selector selector--singleselect">
             <div class="itemBox__action itemBox__action--secondary itemBox__action--inline JS_has-popup" data-popid="#multiSelector-error"></div>
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <span class="selector__blockPart selector__blockPart--field">_Not Assigned</span>
               </div>
@@ -403,7 +403,7 @@
         <div class="itemBox__cellInner">
 
           <div class="selector selector--multiselect JS_selector">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--prefix" style="background-color: gray;"></div>
                 <div class="selector__blockPart selector__blockPart--field">275</div>
@@ -434,7 +434,7 @@
       <div class="itemBox__cellInner">
         <div class="itemBox__value">
           <div class="selector selector--expanded">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field">31795</div>
               </div>
@@ -451,7 +451,7 @@
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
-          <div class="selector__item selector__item--selected">
+          <div class="selector__item JS_selectorItem--active selector__item--selected">
             <div class="selector__block">
               <span class="selector__blockPart selector__blockPart--field">Andriy Lisovoy</span>
             </div>
@@ -462,7 +462,7 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect selector--expanded JS_selector">
-          <div class="selector__item selector__item--selected JS_selectorItem">
+          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--prefix"></div>
             </div>
@@ -487,7 +487,7 @@
       <div class="itemBox__cellInner">
         <div class="itemBox__value">
           <div class="selector selector--expanded">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field">161531</div>
               </div>
@@ -504,7 +504,7 @@
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
-          <div class="selector__item selector__item--selected">
+          <div class="selector__item JS_selectorItem--active selector__item--selected">
             <div class="selector__block">
               <span class="selector__blockPart selector__blockPart--field">Manuel From Barça</span>
             </div>
@@ -521,7 +521,7 @@
             </div>
           </div>
           <div class="selector__itemSeperator"></div>
-          <div class="selector__item selector__item--selected JS_selectorItem">
+          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--prefix"></div>
             </div>
@@ -540,7 +540,7 @@
       <div class="itemBox__cellInner">
         <div class="itemBox__value">
           <div class="selector selector--expanded">
-            <div class="selector__item selector__item--selected">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field">283377</div>
               </div>
@@ -557,7 +557,7 @@
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
-          <div class="selector__item selector__item--selected">
+          <div class="selector__item JS_selectorItem--active selector__item--selected">
             <div class="selector__block">
               <span class="selector__blockPart selector__blockPart--field">Manuel From Barça</span>
             </div>
@@ -574,7 +574,7 @@
             </div>
           </div>
           <div class="selector__itemSeperator"></div>
-          <div class="selector__item selector__item--selected JS_selectorItem">
+          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--prefix"></div>
             </div>
