--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -3,7 +3,7 @@
     <div class="itemBox__cellInner">
 
       <div class="selector selector--expanded">
-        <div class="selector__item selector__item--selected">
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
           <div class="selector__block ">
             <div class="selector__blockPart selector__blockPart--field">←</div>
           </div>
@@ -16,7 +16,7 @@
     <div class="itemBox__cellInner">
 
       <div class="selector">
-        <div class="selector__item selector__item--selected">
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
           <div class="selector__block ">
             <div class="selector__blockPart selector__blockPart--field">April</div>
           </div>
@@ -29,7 +29,7 @@
     <div class="itemBox__cellInner">
 
       <div class="selector selector--expanded">
-        <div class="selector__item selector__item--selected">
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
           <div class="selector__block ">
             <div class="selector__blockPart selector__blockPart--field">→</div>
           </div>
