--- a/_includes/blocks/popup/ms-excluded-toggle.html
+++ b/_includes/blocks/popup/ms-excluded-toggle.html
@@ -1,5 +1,5 @@
 <div class="selector JS_toggle--InclExcl">
-  <div class="selector__item selector__item--selected">
+  <div class="selector__item JS_selectorItem--active selector__item--selected">
     <div class="selector__block">
       <div class="selector__blockPart selector__blockPart--label JS_inclExl" data-filter="Exclude">Exclude</div>
     </div>
