--- a/_includes/blocks/popup/ms-sublist-options.html
+++ b/_includes/blocks/popup/ms-sublist-options.html
@@ -4,13 +4,13 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner JS_toggle--options">
         <div class="selector selector--singleselect selector--required selector--expanded JS_selector">
-          <div class="selector__item JS_selectorItem">
+          <div class="selector__item JS_selectorItem JS_columnPickerOption--enabled">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--field"></div>
             </div>
           </div>
           <div class="selector__itemSeperator"></div>
-          <div class="selector__item JS_selectorItem selector__item--selected">
+          <div class="selector__item JS_selectorItem JS_selectorItem--active JS_selectorItem--active selector__item--selected">
             <div class="selector__block ">
               <div class="selector__blockPart selector__blockPart--field"></div>
             </div>
