--- a/_includes/blocks/popup/selector-include-exclude.html
+++ b/_includes/blocks/popup/selector-include-exclude.html
@@ -1,4 +1,4 @@
-{% assign selectedClass = "selector__item--selected" %}
+{% assign selectedClass = "JS_selectorItem--active selector__item--selected" %}
 
 
 {% assign includeSelectedClass = {selectedClass} %}
