--- a/_includes/javascript/and-or-selector.html
+++ b/_includes/javascript/and-or-selector.html
@@ -1,5 +1,5 @@
   <div class="selector selector--singleselect selector--expanded JS_selector">
-    <div class="selector__item selector__item--selected JS_selectorItem">
+    <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
       <div class="selector__block">
         <div class="selector__blockPart selector__blockPart--label">Or</div>
       </div>
