--- a/_includes/javascript/newSelectedItem--unit.html
+++ b/_includes/javascript/newSelectedItem--unit.html
@@ -2,7 +2,7 @@
 
   ${colorToggleHTML}
   <div class="selector selector--expanded">
-    <div class="selector__item selector__item--selected">
+    <div class="selector__item JS_selectorItem--active selector__item--selected">
       <div class="selector__block">
         ${colorPrefixHTML}
         <div class="selector__blockPart selector__blockPart--field JS_text">${textOfActionItem}</div>
