--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -57,7 +57,7 @@
                   <div class="itemBox__value">
 
                     <div class="selector selector--expanded">
-                      <div class="selector__item selector__item--selected">
+                      <div class="selector__item JS_selectorItem--active selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
                         </div>
@@ -80,7 +80,7 @@
                   <div class="itemBox__value">
 
                     <div class="selector selector--expanded">
-                      <div class="selector__item selector__item--selected">
+                      <div class="selector__item JS_selectorItem--active selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">19/03/18-20/03/18</div>
                         </div>
@@ -125,7 +125,7 @@
                   <div class="itemBox__value">
 
                     <div class="selector selector--expanded">
-                      <div class="selector__item selector__item--selected">
+                      <div class="selector__item JS_selectorItem--active selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">today</div>
                         </div>
@@ -148,7 +148,7 @@
                   <div class="itemBox__value">
 
                     <div class="selector selector--expanded">
-                      <div class="selector__item selector__item--selected">
+                      <div class="selector__item JS_selectorItem--active selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">18/04/18</div>
                         </div>
@@ -205,7 +205,7 @@
 
                 {% include blocks/popup/selector-include-exclude.html selected="exclude"%}
                 <div class="selector selector--expanded">
-                  <div class="selector__item selector__item--selected">
+                  <div class="selector__item JS_selectorItem--active selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">today</div>
                     </div>
@@ -246,7 +246,7 @@
 
                 {% include blocks/popup/selector-include-exclude.html selected="exclude"%}
                 <div class="selector selector--expanded JS_toggle--calendar">
-                  <div class="selector__item selector__item--selected">
+                  <div class="selector__item JS_selectorItem--active selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">18/04/18</div>
                     </div>
@@ -288,7 +288,7 @@
 
                 {% include blocks/popup/selector-include-exclude.html selected="include"%}
                 <div class="selector selector--expanded">
-                  <div class="selector__item selector__item--selected">
+                  <div class="selector__item JS_selectorItem--active selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">19/03/18-20/03/18</div>
                     </div>
@@ -329,7 +329,7 @@
 
                 {% include blocks/popup/selector-include-exclude.html selected="include"%}
                 <div class="selector selector--expanded">
-                  <div class="selector__item selector__item--selected">
+                  <div class="selector__item JS_selectorItem--active selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
                     </div>
