--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -56,7 +56,7 @@
                   <div class="itemBox__value">
 
                     <div class="selector selector--expanded">
-                      <div class="selector__item selector__item--selected">
+                      <div class="selector__item JS_selectorItem--active selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">{{item}}</div>
                         </div>
@@ -104,7 +104,7 @@
 
               {% include blocks/popup/selector-include-exclude.html selected="include"%}
               <div class="selector selector--expanded">
-                <div class="selector__item selector__item--selected">
+                <div class="selector__item JS_selectorItem--active selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
                   </div>
