--- a/_includes/popups/old-pmx-multiselect.html
+++ b/_includes/popups/old-pmx-multiselect.html
@@ -4,7 +4,7 @@
       <div id="tabs" class="old-multiselect-tabs">
 
         <div class="selector selector--expanded JS_selector JS_selector--incl-excl JS_selector--old">
-          <div class="selector__item selector__item--selected JS_selectorItem JS_selector__item--include">
+          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_selector__item--include">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--field">Include</div>
             </div>
