--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -24,7 +24,7 @@
           <div class="itemBox__value">
 
             <div class="selector selector--expanded">
-              <div class="selector__item selector__item--selected">
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
                 <div class="selector__block">
                   <span class="selector__blockPart selector__blockPart--label">Any</span>
                   <span class="selector__blockSeperator"></span>
@@ -44,7 +44,7 @@
           <div class="itemBox__value">
 
             <div class="selector selector--expanded">
-              <div class="selector__item selector__item--selected">
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
                 <div class="selector__block">
                   <span class="selector__blockPart selector__blockPart--label">title</span>
                   <span class="selector__blockSeperator"></span>
@@ -64,7 +64,7 @@
           <div class="itemBox__value">
 
             <div class="selector selector--expanded">
-              <div class="selector__item selector__item--selected">
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
                 <div class="selector__block">
                   <span class="selector__blockPart selector__blockPart--label">Assigned to</span>
                   <span class="selector__blockSeperator"></span>
@@ -84,7 +84,7 @@
           <div class="itemBox__value">
 
             <div class="selector selector--expanded">
-              <div class="selector__item selector__item--selected">
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
                 <div class="selector__block">
                   <span class="selector__blockPart selector__blockPart--label">Priority</span>
                   <span class="selector__blockSeperator"></span>
