--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -24,7 +24,7 @@
           <div class="itemBox__cellInner JS_text">
 
             <div class="selector selector--expanded">
-              <div class="selector__item selector__item--selected">
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
                 <div class="selector__block">
                   <div class="selector__blockPart selector__blockPart--label">{{item.label}}</div>
                   <div class="selector__blockSeperator"></div>
