--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -17,7 +17,7 @@
     <div class="action readonly">
 
       <div class="selector selector--expanded">
-        <div class="selector__item selector__item--selected">
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
           <div class="selector__block">
             <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
           </div>
@@ -28,7 +28,7 @@
     <div class="action">
 
       <div class="selector selector--singleselect selector--expanded JS_selector">
-        <div class="selector__item selector__item--selected JS_selectorItem JS_toggle-progress">
+        <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_toggle-progress">
           <div class="selector__block">
             <div class="selector__blockPart selector__blockPart--prefix"></div>
           </div>
