--- a/_includes/blocks/popup/calendar/ms-row-calendar.html
+++ b/_includes/blocks/popup/calendar/ms-row-calendar.html
@@ -28,7 +28,7 @@
     <div class="itemBox__cellInner">
 
       <div class="selector selector--expanded {{ dayClass }}">
-        <div class="selector__item selector__item--selected">
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
           <div class="selector__block ">
             <div class="selector__blockPart selector__blockPart--field ">{{ day }}</div>
           </div>
