--- a/_includes/blocks/popup/ms-sublist-incl-excl-filter.html
+++ b/_includes/blocks/popup/ms-sublist-incl-excl-filter.html
@@ -4,7 +4,7 @@
       <div class="itemBox__cellInner JS_itemBox__cellInner--inclExcl" data-filter="Include">
 
         <div class="selector selector--expanded">
-          <div class="selector__item selector__item--selected">
+          <div class="selector__item JS_selectorItem--active selector__item--selected">
             <div class="selector__block">
               <span class="selector__blockPart selector__blockPart--label">Include</span>
             </div>
