--- a/_includes/blocks/popup/ms-sublist-tags-colors-color.html
+++ b/_includes/blocks/popup/ms-sublist-tags-colors-color.html
@@ -7,7 +7,7 @@
           <div class="itemBox__action">
 
             <div class="selector selector--expanded">
-              <div class="selector__item selector__item--selected">
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
                 <div class="selector__block">
                   <span class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{item.color}};" data-color="{{item.color}}"></span>
                 </div>
