--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -57,7 +57,7 @@
               <div class="itemBox__value">
 
                 <div class="selector selector--expanded">
-                  <div class="selector__item selector__item--selected">
+                  <div class="selector__item JS_selectorItem--active selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff"></div>
                       <div class="selector__blockPart selector__blockPart--field JS_text">Design</div>
@@ -85,7 +85,7 @@
               <div class="itemBox__value">
 
                 <div class="selector selector--expanded">
-                  <div class="selector__item selector__item--selected">
+                  <div class="selector__item JS_selectorItem--active selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51"></div>
                       <div class="selector__blockPart selector__blockPart--field JS_text">Marketing</div>
@@ -136,7 +136,7 @@
                   <div class="itemBox__value">
 
                     <div class="selector selector--expanded">
-                      <div class="selector__item selector__item--selected">
+                      <div class="selector__item JS_selectorItem--active selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16"></div>
                           <div class="selector__blockPart selector__blockPart--field JS_text">Front-end</div>
@@ -165,7 +165,7 @@
                   <div class="itemBox__value">
 
                     <div class="selector selector--expanded">
-                      <div class="selector__item selector__item--selected">
+                      <div class="selector__item JS_selectorItem--active selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022"></div>
                           <div class="selector__blockPart selector__blockPart--field JS_text">Back-end</div>
@@ -216,7 +216,7 @@
               {% include blocks/popup/selector-include-exclude.html selected="include"%}
 
               <div class="selector selector--expanded">
-                <div class="selector__item selector__item--selected">
+                <div class="selector__item JS_selectorItem--active selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Design</div>
@@ -242,7 +242,7 @@
               {% include blocks/popup/selector-include-exclude.html selected="include"%}
 
               <div class="selector selector--expanded">
-                <div class="selector__item selector__item--selected">
+                <div class="selector__item JS_selectorItem--active selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Marketing</div>
@@ -267,7 +267,7 @@
 
               {% include blocks/popup/selector-include-exclude.html selected="exclude"%}
               <div class="selector selector--expanded">
-                <div class="selector__item selector__item--selected">
+                <div class="selector__item JS_selectorItem--active selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Front-end</div>
@@ -292,7 +292,7 @@
 
               {% include blocks/popup/selector-include-exclude.html selected="exclude"%}
               <div class="selector selector--expanded">
-                <div class="selector__item selector__item--selected">
+                <div class="selector__item JS_selectorItem--active selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Back-end</div>
