--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -38,7 +38,7 @@
                   {% include javascript/colorToggle.html color=item.color %}
 
                   <div class="selector selector--expanded">
-                    <div class="selector__item selector__item--selected">
+                    <div class="selector__item JS_selectorItem--active selector__item--selected">
                       <div class="selector__block">
                         <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
                       </div>
@@ -92,7 +92,7 @@
                 {% include javascript/colorToggle.html color=item.color %}
 
                 <div class="selector selector--expanded">
-                  <div class="selector__item selector__item--selected">
+                  <div class="selector__item JS_selectorItem--active selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
                     </div>
