reorder action not hidden anymore

--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -4,7 +4,7 @@
   </li>
   <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--draggable">
     <div class="itemBox__cellInner">
-      <i class="itemBox__action itemBox__action--hidden">އ</i>
+      <i class="itemBox__action ">އ</i>
     </div>
   </li>
   <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__action">
