added columnpicker option when selecting new item in cloumnpicker

--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -2,6 +2,7 @@
   <li class="itemBox__cell ${textActionClass}">
     ${newSelectedItemHTML}
   </li>
+${columnPickerOptionBlock}
   <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--draggable">
     <div class="itemBox__cellInner">
       <i class="itemBox__action ">އ</i>
@@ -14,3 +15,4 @@
   </li>
 </ul>
 ${colorChildren}
+${columnpickeroptions}
