--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -592,3 +592,23 @@
     </li>
   </ul>
 </div><!-- /.itemBox -->
+
+
+
+
+<!-- Popup -->
+<div class="multiSelector" id="multiSelector-error">
+  <div class="itemBox">
+    <ul class="itemBox__row itemBox__row--custom">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+
+          <div class="note note--error">
+            <p>This item must be assigned to a specific user.</p>
+          </div>
+
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
