update buttons component

--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -27,6 +27,7 @@
 @import "components/tabs.css";
 @import "components/note.css";
 @import "components/multiSelector.css";
+@import "components/buttons.css";
 
 // temporary, because of js
 @import "temporary.css";
