--- a/sass/framework.scss
+++ b/sass/framework.scss
@@ -9,6 +9,13 @@
   clear: both;
 }
 
+.primary {
+  color: var(--color-primary);
+}
+.secondary {
+  color: var(--color-secondary);
+}
+
 /* grid */
 
 .row {
@@ -262,16 +269,6 @@
       background-size: 80px 80px;
       background-image: linear-gradient(
         135deg,
-        rgba(200,200,200,0.5) 0%,
-        rgba(200,200,200,0.5) 20%,
-        transparent 40%,
-        rgba(200,200,200,0.5) 50%,
-        rgba(200,200,200,0.5) 70%,
-        transparent 90%,
-        rgba(200,200,200,0.5) 100%
-      );
-      background-image: linear-gradient(
-        135deg,
         rgba(0,0,0,.1) 0%,
         rgba(0,0,0,.1) 20%,
         transparent 40%,
@@ -319,6 +316,10 @@
 
   &:hover {
     transform: translate(0, -2px);
+  }
+
+  &--secondary {
+    color: var(--color-secondary);
   }
 }
 
