--- a/sass/framework.scss
+++ b/sass/framework.scss
@@ -99,7 +99,13 @@
 
 .inline {
   display: inline;
+}
+
+.middle {
   vertical-align: middle;
+}
+.baseline {
+  vertical-align: baseline;
 }
 
 .align-left {
