--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -14,62 +14,46 @@
   position: relative;
   display: inline-block;
   margin: 0 5px;
-  border-radius: 30px;
+  padding: 5px 18px;
+  border-radius: 15px;
   text-align: center;
   transition: all .3s ease-in-out;
   font-size: 16px;
   background-color: #F4F4F4;
   color: #000;
-  backface-visibility: hidden;
-
-  span {
-    display: block;
-    padding: 5px 18px;
-    background-color: inherit;
-    border-radius: 15px;
-  }
-
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    border-radius: 37px;
-    transition: all .3s ease-in-out;
-    color: inherit;
-    box-shadow: 0 2px 0 0;
-    pointer-events: none;
-  }
+  box-shadow: 0 2px 0 #CCC;
 
   &:hover {
     transform: translatey(1px);
-
-    &::after {
-      box-shadow: 0 1px 0 0;
-    }
+    box-shadow: 0 1px 0 #CCC;
   }
 
   &--go {
     background-color: #01ADFF;
+    box-shadow: 0 2px 0 #055074;
+
+    &:hover {
+      box-shadow: 0 1px 0 #055074;
+    }
   }
 
   &--drop {
     background-color: #FF1919;
+    box-shadow: 0 2px 0 #660202;
+
+    &:hover {
+      box-shadow: 0 1px 0 #660202;
+    }
   }
 
   &--naked {
     background-color: transparent;
     text-decoration: underline;
+    padding: 5px 0;
+    box-shadow: none;
 
-    &::after {
-      display: none;
-    }
-
-    span {
-      padding: 5px 0;
+    &:hover {
+      box-shadow: none;
     }
   }
 }
