--- a/sass/app.scss
+++ b/sass/app.scss
@@ -17,6 +17,8 @@
 :root {
   --color-primary: #AC840B;
   --color-secondary: #E61616;
+  --color-blue: #00BFFF;
+  --color-grey: #E5E4E2;
 }
 
 body {
