--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -19,7 +19,7 @@
   text-align: center;
   transition: all .3s ease-in-out;
   font-size: 16px;
-  background-color: #E5E4E2;
+  background-color: var(--color-grey);
   color: #000;
   box-shadow: 0 2px 0 #CCC;
 
