update page header item

--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -25,7 +25,7 @@
       </div>
 
     </div>
-    <div class="action">
+    <div class="action readonly">
 
       <div class="selector selector--singleselect selector--expanded JS_selector">
         <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_toggle-progress">
