--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col col-6 align-left">
-    <a href="#" class="action-icon font--action JS_toggle-app-navigator"></a>
-    <a href="/" class="action-icon font--action"></a>
+    <a href="#" class="action-icon JS_toggle-app-navigator"></a>
+    <a href="/" class="action-icon"></a>
   </div>
   <div class="col col-6 align-right">
-    <a href="#" class="action-icon font--action JS_toggle-semsearch"></a>
-    <a href="#" class="action-icon font--action JS_toggle-user-menu"></a>
+    <a href="#" class="action-icon JS_toggle-semsearch"></a>
+    <a href="#" class="action-icon JS_toggle-user-menu"></a>
   </div>
 </div>
 
