--- a/sass/app.scss
+++ b/sass/app.scss
@@ -70,6 +70,8 @@ body {
     position: relative;
     left: 0;
     transition: all .3s ease-in-out;
+    max-width: 100vw;
+    width: 100%;
   }
 }
 
