Multiselect animation: animating removing 1 item

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -23,5 +23,6 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-filter.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-incl-excl-filter.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-reset-to-default.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-selected-item-animation.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-sortable.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-sublist-closer.js"></script>
